Footer social section added and some minor alignment issues fixed.

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,7 @@ body {
 .raise-md-hover:hover {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
+
+.socialButton {
+    padding: 0.4rem !important;
+}
